# django-kikeou

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
kikeou/: apps.py  urls.py  views.py
kikeou/admin/: __init__.py  company.py  cycle.py  cycles.py  locations.py  person.py  persons.py  show_staffs.py  shows.py
kikeou/migrations/: 0001_initial.py  0002_alter_location_contact.py  0002_auto_20220530_1051.py  0002_person_age_type.py  0003_alter_showstaffmember_options.py  0003_auto_20220605_0851.py  0003_person.py  0004_auto_20220604_0119.py  0004_show_showtype.py  0005_auto_20220604_0214.py  0005_auto_20220605_1735.py  0006_accommodation_location_lodge_stage_warmupplace.py  0006_showstafffunction_showstaffmember.py
kikeou/models/: __init__.py  companies.py  cycle.py  cycles.py  locations.py  person.py  persons.py  show_staffs.py  shows.py
kikeou/templates/: kikeou-base-form.html  kikeou-base.html
manage/: _boot_django.py  _urls_debug.py  createsuperuser.py  makemigrations.py  migrate.py  run_tests.py  runserver.py
management/: boot_django.py  makemigrations.py
requirements/: dev.txt  test.txt
sample/: settings.py  urls.py
sample_project/project/: settings.py
src/kikeou/: apps.py
tests/: _urls.py  test_basics.py  test_company.py  test_cycle.py  test_cycle_dependent_abstract.py  test_cycle_dependents.py  test_location_dependents.py  test_locations.py  test_person.py  test_person_dependents.py  test_persons.py  test_show_staffs.py  test_shows.py  test_views.py
(+26 files in other folders)
