[metadata]
name = django-kikeou
version = 0.1
description = A Django app to manage artists for your events
long_description = file: README.md
url = https://github.com/la-plage/django-kikeou/
author = La Plage des Six Pompes // Gosti (github: gostich)
author_email = kikeou@laplage.ch
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires =
    Django>=3.2
package_dir=
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src
